tests/snapshots/repl_tests__tests__input_area_multiline_three_lines.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│> first                                                   │
│se█cond                                                   │
│third                                                     │
│                                                          │
└────────────────── Shift/Alt+Enter: newline · Enter: send ┘
