tests/snapshots/repl_tests__tests__quit_confirm_minimal_terminal.snap
---
source: tests/repl_tests.rs
assertion_line: 682
expression: "lines.join(\"\\n\")"
---
                                                            
                                                            
                                                            
     ┌────────────────────────────────────────────────┐     
     │                                                │     
     │              ⚠  WAIT! DON'T LEAVE!  ⚠          │     
     │                                                │     
     │       Are you sure you want to quit PeakBot?   │     
     │                                                │     
     │           Yes, leave      [ No, stay ]         │     
     │                                                │     
     └────────────────────────────────────────────────┘
