tests/snapshots/repl_tests__tests__quit_confirm_no_selected.snap
---
source: tests/repl_tests.rs
assertion_line: 640
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
               ┌────────────────────────────────────────────────┐               
               │                                                │               
               │              ⚠  WAIT! DON'T LEAVE!  ⚠          │               
               │                                                │               
               │       Are you sure you want to quit PeakBot?   │               
               │                                                │               
               │           Yes, leave      [ No, stay ]         │               
               │                                                │               
               └────────────────────────────────────────────────┘
