tests/snapshots/repl_tests__tests__status_bar_empty.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
Tokens: 0 │ Calls: 0 │ Cost: $0.0000 │ Context: 0.0% │ Model:
