tests/snapshots/repl_tests__tests__status_bar_with_stats.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
Tokens: 1.5k │ Calls: 10 │ Cost: $0.0250 │ Context: 0.0% │ Model: claude-3.7-son
