tests/snapshots/repl_tests__tests__todo_panel_empty.snap
---
source: tests/repl_tests.rs
assertion_line: 716
expression: "lines.join(\"\\n\")"
---
┌ + TODO ────────────────────┐
│No tasks                    │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
