tests/snapshots/repl_tests__tests__todo_panel_long_text.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ ✓ TODO ────────────────────┐
│○ #1 This is a very long    │
│task de...                  │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
